deploy_tra_info_api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deploy-tra-info-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: tra-info-api
  template:
    metadata:
      labels:
        app: tra-info-api
    spec:
      containers:
      - name: pod-tra-info-api
        image: 192.168.58.132:5000/taiwanrailwayinfo:4
        command: ["java", "-jar", "/root/TaiwanRailwayInfo.jar"]
        livenessProbe:
          httpGet:
            path: /healthCheck
            port: 8080
          initialDelaySeconds: 10
          periodSeconds: 60
      restartPolicy: Always
      imagePullSecrets:
      - name: regcred
