svc_tra_info_api.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-tra-info-api
spec:
  type: ClusterIP
  selector:
    app: tra-info-api
  ports:
  - targetPort: 8080
    port: 8080
