svc_tra_info_react.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-tra-info-react
spec:
  type: ClusterIP
  selector:
    app: tra-info-react
  ports:
  - targetPort: 3000
    port: 3000
