ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: web
  annotations: 
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: react.haoying.ngrok.io
      http:
        paths:
        - path: /
          backend:
            serviceName: svc-tra-info-react
            servicePort: 3000
    - host: api.haoying.ngrok.io
      http:
        paths:
        - path: /
          backend:
            serviceName: svc-tra-info-api
            servicePort: 8080
